Name:                vector-sparse
Cabal-version:       >=1.2
Version:             0.1
Synopsis:            Efficient sparse vectors simulating Vector (Maybe a)
Description:         A sparse vector structure built on top of Data.Vector and Data.Fingertree interval maps.
License:             BSD3
License-file:        LICENSE
Author:              Daniel Peebles <pumpkingod@gmail.com>
Maintainer:          Daniel Peebles <pumpkingod@gmail.com>
Category:            Data
Build-type:          Simple

Flag Tests
  Description:         Build the testsuite
  Default:             False

Library
  Hs-Source-Dirs:      src
    
  -- Modules exported by the library.
  Exposed-modules:     Data.SparseVector
  
  -- Packages needed in order to build this package.
  Build-depends:       base == 4.*,
                       primitive >= 0.3 && < 0.4, 
                       fingertree >= 0.0.1 && < 0.0.2, 
                       vector >= 0.6 && <= 0.7
  
Executable vector-sparse-tests
  Hs-Source-Dirs:      src tests
  
  Main-Is:             Main.hs
  
  if !flag(tests)
    Buildable:         False
  else
    Build-Depends:     QuickCheck == 2.*,
                       test-framework >= 0.3 && < 0.4,
                       test-framework-quickcheck2 == 0.2.*
    
    Ghc-Options:       -threaded
    
    